# your-second-first-language

./: .gitignore  README.md  forge.config.ts  index.html  package-lock.json  package.json  vite.main.config.ts
.claude/: CLAUDE.md
agents/: f.md  g.md  m.md  r.md
electron/: main.ts  preload.ts
electron/ipc/: chat.ts  data.ts  index.ts  language.ts
electron/services/: claudeService.ts  fileService.ts  languageService.ts  sessionService.ts
scripts/: add-grammar.sh  add-word.sh  adjust-difficulty.sh  bootstrap-language.sh  mark-grammar-used.sh  mark-word-recalled.sh  update-word-note.sh
src/: App.tsx  electron.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatView.tsx  LanguageSelector.tsx  ModeSelector.tsx  ModeTabs.tsx
src/types/: modes.ts
src/utils/: strings.ts
templates/: grammar-schema.json  tutor-instructions.md  user-overrides-schema.json  vocabulary-schema.json
