[package]
name = "your-second-first-language"
version = "0.1.0"
description = "Learn a new language the way you learned your first"
authors = ["you"]
edition = "2021"

[lib]
name = "your_second_first_language_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
